--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegistrationPage" />
+        <activity android:name=".DonorRegistrationPage" />
+        <activity android:name=".CharityRegistrationPage" />
     </application>
 
 </manifest>
