--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         debug {
-            resValue 'string', "ApiKey", GoogleMapsAPI
+            resValue 'string', "ApiKey_GoogleMaps", GoogleMapsAPI
         }
         release {
             minifyEnabled false
