--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        debug{
-            resValue 'string', "ApiKey", GoogleMapsAPI
+        debug {
+            resValue 'string', "ApiKey_GoogleMaps", GoogleMapsAPI
         }
         release {
             minifyEnabled false
@@ -31,10 +31,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'com.android.support:design:28.0.0'
 }
