--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".preferencesPage"></activity>
-        <activity android:name=".statisticsPage" />
+        <activity android:name=".StatisticsPage" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -64,6 +63,7 @@
         </activity>
         <activity android:name=".DonorRegistrationPage" />
         <activity android:name=".CharityRegistrationPage" />
+        <activity android:name=".SettingsPage" />
     </application>
 
 </manifest>
