--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         <activity android:name=".DonorRegistrationPage" />
         <activity android:name=".CharityRegistrationPage" />
         <activity android:name=".SettingsPage" />
+        <activity android:name=".CharitySettingsPage" />
     </application>
 
 </manifest>
