--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity android:name=".SettingsPage" />
         <activity android:name=".CharitySettingsPage" />
         <activity android:name=".DonationRequest" />
+        <activity android:name=".RequestView" />
     </application>
 
 </manifest>
